chart-test/templates/ui-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ui-network-policy
spec:
  podSelector:
    matchLabels:
      app: inventory-ui
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    ports:
    - protocol: TCP
      port: 80
  egress: []
